Continue tokenizing NodeSelector

--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1278,5 +1278,7 @@
         <file alias="chevron-right_small_thin_outline">images/themed/tokenizable/chevron-right_small_thin_outline.svg</file>
         <file alias="chevron-left_medium_thin_outline">images/themed/tokenizable/chevron-left_medium_thin_outline.svg</file>
         <file alias="chevron-right_medium_thin_outline">images/themed/tokenizable/chevron-right_medium_thin_outline.svg</file>
+        <file alias="download_small_thin_outline">images/themed/tokenizable/download_small_thin_outline.svg</file>
+        <file alias="x_small_thin_outline">images/themed/tokenizable/x_small_thin_outline.svg</file>
     </qresource>
 </RCC>
