--- a/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
@@ -47,11 +47,6 @@ border:none;
 #wLeftPaneNS
 {
 background-color: #F7F7F7; /*colorToken.surface-1*/
-}
-
-#stackedWidget
-{
-background-color: #FFFFFF; /*colorToken.page-background*/
 }</string>
   </property>
   <property name="TOKENIZED" stdset="0">
@@ -116,7 +111,7 @@ background-color: #FFFFFF; /*colorToken.page-background*/
           <number>0</number>
          </property>
          <property name="leftMargin">
-          <number>0</number>
+          <number>16</number>
          </property>
          <property name="topMargin">
           <number>0</number>
@@ -313,6 +308,23 @@ background-color: #FFFFFF; /*colorToken.page-background*/
        </widget>
       </item>
       <item>
+       <widget class="IconOnlyButton" name="pushButton">
+        <property name="text">
+         <string notr="true"/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../gui/Resources_common.qrc">
+          <normaloff>:/aftereffects_medium</normaloff>:/aftereffects_medium</iconset>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">primary</string>
+        </property>
+        <property name="dimension" stdset="0">
+         <string notr="true">large</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -355,6 +367,11 @@ background-color: #FFFFFF; /*colorToken.page-background*/
    <extends>QWidget</extends>
    <header>TabSelector.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>IconOnlyButton</class>
+   <extends>QPushButton</extends>
+   <header>TokenizableItems/TokenizableButtons.h</header>
   </customwidget>
  </customwidgets>
  <resources>
