--- a/src/MEGASync/transfers/gui/ui/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/ui/TransferManager.ui
@@ -1877,7 +1877,7 @@ QToolButton
               </spacer>
              </item>
              <item row="0" column="1">
-              <widget class="QToolButton" name="tActionButton">
+              <widget class="QPushButton" name="tActionButton">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -1901,6 +1901,12 @@ QToolButton
                </property>
                <property name="text">
                 <string>Retry all</string>
+               </property>
+               <property name="type" stdset="0">
+                <string notr="true">primary</string>
+               </property>
+               <property name="dimension" stdset="0">
+                <string notr="true">small</string>
                </property>
               </widget>
              </item>
