--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -953,7 +953,7 @@ margin-bottom: 3px;
         </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_12">
+        <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="1,1">
          <item>
           <widget class="QGroupBox" name="gLanguage">
            <property name="sizePolicy">
@@ -1018,72 +1018,79 @@ margin-bottom: 3px;
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="gThemeSelector">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
+          <layout class="QVBoxLayout" name="verticalLayout_23">
+           <property name="spacing">
+            <number>0</number>
            </property>
-           <property name="title">
-            <string notr="true">Theme</string>
-           </property>
-           <property name="type" stdset="0">
-            <string notr="true">mega</string>
-           </property>
-           <layout class="QVBoxLayout" name="verticalLayout_21">
-            <property name="leftMargin">
-             <number>12</number>
-            </property>
-            <property name="topMargin">
-             <number>12</number>
-            </property>
-            <property name="rightMargin">
-             <number>12</number>
-            </property>
-            <property name="bottomMargin">
-             <number>12</number>
-            </property>
-            <item>
-             <widget class="QComboBox" name="cbTheme">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
+           <item>
+            <widget class="QGroupBox" name="gThemeSelector">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="title">
+              <string notr="true">Theme</string>
+             </property>
+             <property name="type" stdset="0">
+              <string notr="true">mega</string>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_21">
+              <property name="leftMargin">
+               <number>12</number>
               </property>
-              <property name="minimumSize">
-               <size>
-                <width>266</width>
-                <height>0</height>
-               </size>
+              <property name="topMargin">
+               <number>12</number>
               </property>
-              <property name="cursor">
-               <cursorShape>PointingHandCursor</cursorShape>
+              <property name="rightMargin">
+               <number>12</number>
               </property>
-              <property name="type" stdset="0">
-               <string notr="true">mega</string>
+              <property name="bottomMargin">
+               <number>12</number>
               </property>
-              <property name="dimension" stdset="0">
-               <string notr="true">small</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_12">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
+              <item>
+               <widget class="QComboBox" name="cbTheme">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>266</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="cursor">
+                 <cursorShape>PointingHandCursor</cursorShape>
+                </property>
+                <property name="type" stdset="0">
+                 <string notr="true">mega</string>
+                </property>
+                <property name="dimension" stdset="0">
+                 <string notr="true">small</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_12">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
